# Fellowship

./: .gitignore  Deploy.ps1  EXPERIMENT_LOG.md  Manage-Server.ps1  PROJECT_STATE.md  README.md  Start-TestEnv.ps1  Stop-TestEnv.ps1  memory.md
.agents/rules/: memory.md  mod-rules.md
client/: CMakeLists.txt  vcpkg.json
client/src/: ActorManager.cpp  ActorManager.h  Hooks.cpp  Hooks.h  Networking.cpp  Networking.h  Version.h  main.cpp
server/: index.js  package-lock.json  package.json  server_error.txt  server_log.txt
